# robovm

./: .gitignore  README.md  RELEASE.md  build.sh  pom.xml  release.sh
compiler/libhfscompressor/: CMakeLists.txt  NOTICE  README.md  build.sh
compiler/libhfscompressor/src/main/native/: hfscompressor.c
compiler/libhfscompressor/src/main/resources/macosx/arm64/: libhfscompressor.dylib  librobovm-libhfscompressor.dylib
compiler/libhfscompressor/src/main/resources/macosx/x86_64/: libhfscompressor.dylib  librobovm-libhfscompressor.dylib
compiler/libimobiledevice/: CMakeLists.txt  build.sh  genbindings.sh  pom.xml
compiler/libimobiledevice/patches/: 01-fix-ios13-bypass-ssl.patch  02-fix-ios13-missing-timeout-err.patch  03-fix-ios14-pr1004-fallback-secure-services.patch  04-fix-ssl_read_with_timeout.patch
compiler/libimobiledevice/src/main/java/org/robovm/libimobiledevice/: AfcClient.java  Callbacks.java  DebugServerClient.java  IDevice.java  IDeviceConnection.java  InstallationProxyClient.java  LockdowndClient.java  LockdowndServiceDescriptor.java  MobileImageMounterClient.java  NativeLibrary.java
compiler/libimobiledevice/src/main/java/org/robovm/libimobiledevice/binding/: AfcClientRef.java  AfcClientRefOut.java  AfcError.java  AfcLinkType.java  AfcLockOperation.java  ByteArray.java  ByteArrayOut.java  DebugServerClientRef.java  DebugServerClientRefOut.java  DebugServerCommandRef.java  DebugServerCommandRefOut.java  DebugServerError.java  IDeviceConnectionRef.java  IDeviceConnectionRefOut.java  (+36 more)
compiler/libimobiledevice/src/main/native/: libimobiledevice_wrap.c
compiler/libimobiledevice/src/main/swig/: common.i  libimobiledevice.i
compiler/libimobiledevice/src/main/swig/include-stub/: stdint.h
compiler/libimobiledevice/src/main/swig/include/libimobiledevice/: lockdown.h
compiler/libimobiledevice/src/test/java/org/robovm/libimobiledevice/: AfcClientTest.java
compiler/llvm/: CMakeLists.txt  build.sh  genbindings.sh  pom.xml
compiler/llvm/patches/: 04-emit-sp-fp-offsets-on-arm.patch  06-emit-build-version.patch
compiler/llvm/src/main/java/org/robovm/llvm/: Context.java  DataLayout.java  Function.java  LineInfo.java  Module.java  NativeLibrary.java  ObjectFile.java  PassManager.java  PassManagerBuilder.java  SectionIterator.java  Symbol.java  Target.java  TargetMachine.java  TargetOptions.java  Type.java
compiler/llvm/src/main/native/: ClangExtra.cpp  LLVMExtra.cpp  LLVMExtra.h  LLVM_wrap.c  exports_linux.sym  exports_macosx.sym
compiler/llvm/src/main/native/include/: ClangExtra.h  LLVMExtra.h
compiler/llvm/src/main/native/include/clang/AST/: AttrDump.inc  AttrImpl.inc  AttrVisitor.inc  Attrs.inc  CommentCommandInfo.inc  CommentHTMLNamedCharacterReferences.inc  CommentHTMLTags.inc  CommentHTMLTagsProperties.inc  DeclNodes.inc  StmtNodes.inc
compiler/llvm/src/main/native/include/clang/Basic/: AttrHasAttributeImpl.inc  AttrList.inc  DiagnosticASTKinds.inc  DiagnosticCommentKinds.inc  DiagnosticCommonKinds.inc  DiagnosticDriverKinds.inc  DiagnosticFrontendKinds.inc  DiagnosticGroups.inc  DiagnosticIndexName.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  DiagnosticSemaKinds.inc  DiagnosticSerializationKinds.inc  Version.inc
compiler/llvm/src/main/native/include/clang/Config/: config.h
compiler/llvm/src/main/native/include/clang/Driver/: Options.inc
compiler/llvm/src/main/native/include/clang/Parse/: AttrParserStringSwitches.inc
compiler/llvm/src/main/native/include/clang/Sema/: AttrParsedAttrImpl.inc  AttrParsedAttrKinds.inc  AttrParsedAttrList.inc  AttrSpellingListIndex.inc  AttrTemplateInstantiate.inc
compiler/llvm/src/main/native/include/clang/Serialization/: AttrPCHRead.inc  AttrPCHWrite.inc
compiler/llvm/src/main/native/include/llvm/Config/: llvm-config.h
compiler/llvm/src/main/native/include/llvm/IR/: Intrinsics.gen
compiler/llvm/src/main/swig/: LLVM.i
compiler/llvm/src/main/swig/include/llvm/Config/: llvm-config.h
compiler/llvm/src/test/java/org/robovm/llvm/: ModuleTest.java  ObjectFileTest.java  TargetMachineTest.java
compiler/vm/: CMakeLists.txt  MergeStaticLibObjectFiles.cmake  build.sh
compiler/vm/bc/src/: CMakeLists.txt  aligned.h  classinfo.c
compiler/vm/core/include/: robovm.h
compiler/vm/core/include/robovm/: hooks.h  method.h  rt.h  shadowframes.h  signal.h  types.h
compiler/vm/core/src/: CMakeLists.txt  JARURLProtocol.m  attribute.c  call0-darwin-thumbv7.s  class.c  exception.c  hooks.c  init.c  memory.c  method.c  private.h  proxy.c  shadowframes.c  signal.c  thread.c
compiler/vm/debug/src/: CMakeLists.txt
compiler/vm/frameworksupport/src/: CMakeLists.txt  frameworksupport.m
compiler/vm/rt/: CMakeLists.txt
compiler/vm/rt/android/: CMakeLists.txt
compiler/vm/rt/android/art/: CMakeLists.txt
compiler/vm/rt/android/art/openjdkjvm/: Android.bp  NOTICE  OpenjdkJvm.cc
compiler/vm/rt/android/art/src/: dalvik_system_VMRuntime.cc
compiler/vm/rt/android/conscrypt/: CMakeLists.txt
compiler/vm/rt/android/conscrypt/cpp/conscrypt/: jniload.cc
compiler/vm/rt/android/libcore/: CMakeLists.txt
compiler/vm/rt/android/libnativehelper/: ALog-priv.h  Android.bp  CMakeLists.txt  JNIHelp.cpp  JniConstants.cpp  JniConstants.h  JniInvocation.cpp  toStringArray.cpp
compiler/vm/rt/android/libnativehelper/header_only_include/nativehelper/: nativehelper_utils.h  scoped_bytes.h  scoped_local_frame.h  scoped_local_ref.h  scoped_utf_chars.h
compiler/vm/rt/android/libnativehelper/include/nativehelper/: JNIHelp.h  JniInvocation.h  ScopedLocalRef.h  ScopedPrimitiveArray.h  module_api.h  toStringArray.h
compiler/vm/rt/android/libnativehelper/platform_include/nativehelper/: jni_macros.h
compiler/vm/rt/android/libnativehelper/platform_include/nativehelper/detail/: signature_checker.h
compiler/vm/rt/android/system/core/base/: CMakeLists.txt
compiler/vm/rt/robovm/: CMakeLists.txt  java_lang_Runtime.c  java_lang_System.c  java_lang_Throwable.c  java_lang_reflect_Array.c  java_net_NetworkInterface.c  org_robovm_rt_GC.c  org_robovm_rt_Signals.c  org_robovm_rt_VM.c  rt.c  sun_misc_Unsafe.c  sun_misc_Unsafe.cpp
(+11544 files in other folders)
